# bosch_radar_sda

./: Jenkinsfile  Makefile  README.md  package.sh
src/bosch_radar_sda/: CMakeLists.txt  package.xml
src/bosch_radar_sda/include/: can_node.h  const_vars.h  cr5tp_can_msg_parser.h  radar_sda_control_flow.h  report_msgs_manager.h  system_state.h  vehicle_info_handler.h
src/bosch_radar_sda/launch/: side_radar.launch
src/bosch_radar_sda/src/: can_node.cpp  cr5tp_can_msg_parser.cpp  radar_sda_control_flow.cpp  report_msgs_manager.cpp  system_state.cpp  vehicle_info_handler.cpp
src/bosch_radar_sda/test/: test_radar_decoder.cpp  test_radar_encoder.cpp
src/bosch_radar_sda/tools/: radar_sda_can_node.cpp
src/bosch_radar_sda_msgs/: CMakeLists.txt  package.xml
src/bosch_radar_sda_msgs/msg/: CR5TPRadarParsed.msg  CR5TPRadarParsedArray.msg
