<?xml version="1.0"?>
<package>
  <name>bosch_radar_sda_msgs</name>
  <version>0.1.0</version>
  <description>The radar_msgs package</description>
  <maintainer email="xinshi@plus.ai">xinshi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>

</package>
